testsuite/deprecated/veronac/features/compile-fail/finalisers.out/stderr.txt
finalisers.verona:10:3: error: Finaliser should have no parameters in class Generic
  final(self: mut, fail: Value)
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~>
finalisers.verona:22:3: error: Finaliser should have no parameters in class NonGeneric
  final(self: mut, fail: U64)
  ^~~~~~~~~~~~~~~~~~~~~~~~~~>
finalisers.verona:34:3: error: Finaliser should not take generic parameters in class Generic2
  final[Value2](self : mut)
  ^~~~~~~~~~~~~~~~~~~~~~~~>
finalisers.verona:46:3: error: Finaliser should not take generic parameters in class NonGeneric2
  final[Value2](self: mut)
  ^~~~~~~~~~~~~~~~~~~~~~~>
4 errors generated
